# aibom

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: hts_aspm_protocol.md
src/aibom/: __init__.py  __main__.py  artifacts.py  aspm_push.py  asset_graph.py  cache.py  cli.py  code_hosts.py  connectors.py  cyclonedx.py  dashboard.py  datasets.py  diff.py  git_diff.py  models.py  owasp_mapping.py  policy.py  prompt_risk.py  remote.py  reporters.py  risk.py  sbom_unified.py  scanner.py  serve.py  signing.py  store.py  tuning.py
src/aibom/compliance/: __init__.py  annex_iv.py  iso_42001.py  nist_rmf.py
src/aibom/demo_fixture/: __init__.py  app.py  main.tf  requirements.txt  values.yaml
src/aibom/demo_fixture/.github/workflows/: train.yml
src/aibom/demo_fixture/mlruns/0/abc123def456/: meta.yaml
src/aibom/demo_fixture/mlruns/0/abc123def456/metrics/: loss
src/aibom/demo_fixture/mlruns/0/abc123def456/tags/: mlflow.source.git.commit
src/aibom/evidence/: __init__.py  github_actions.py  mlflow.py
src/aibom/hts_aspm/: __init__.py  payload.py  push.py
src/aibom/iac/: __init__.py  helm_k8s.py  terraform.py
src/aibom/pr_comment/: __init__.py  _http.py  bitbucket_server.py  format.py  gitea.py  github.py  gitlab.py
src/aibom/runtime/: __init__.py  otel_genai.py
src/aibom/vex/: __init__.py  cdx_vex.py  feed.py  kev.py
src/aibom/vscode/: README.md  extension.js  package.json
src/aibom/webhook/: __init__.py  check_run.py  receiver.py  signatures.py
tests/: test_artifacts.py  test_aspm_push.py  test_aws.py  test_azure.py  test_cli.py  test_connectors.py  test_cyclonedx.py  test_datasets.py  test_gcp.py  test_hts_aspm.py  test_huggingface.py  test_huggingface_enrichment.py  test_iac.py  test_p10.py  test_p11.py  test_p12.py  test_p16.py  test_p4.py  test_p5.py  test_p6.py  test_p7.py  test_p8.py  test_p9.py  test_policy.py  test_prompt_risk.py  test_scanner.py  test_store.py  test_tuning.py
tests/fixtures/: policy.toml  tuning.toml
tests/fixtures/docs_only/: README.md
tests/fixtures/node_app/: package.json
tests/fixtures/policy_app/: app.py
tests/fixtures/python_app/: api.py  app.py  requirements.txt
tests/fixtures/secrets_app/: app.py
