[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aibom"
version = "0.1.0"
description = "AI Bill of Materials scanner for repositories and configuration artifacts"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "HTS Consulting" }
]
license = { text = "Apache-2.0" }
keywords = ["aibom", "sbom", "cyclonedx", "ml-bom", "ai-security", "aspm", "owasp", "llm"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
  "Development Status :: 3 :: Alpha",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/HTS-ASPM/aibom"
Repository = "https://github.com/HTS-ASPM/aibom"
Issues = "https://github.com/HTS-ASPM/aibom/issues"

[project.scripts]
aibom = "aibom.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
